QUAR-1046 fix: Update margin property to use margin-inline-end for better alignment

--- a/packages/bpk-component-inset-banner/src/BpkInsetBannerV2/BpkInsetBannerSponsored.module.scss
+++ b/packages/bpk-component-inset-banner/src/BpkInsetBannerV2/BpkInsetBannerSponsored.module.scss
@@ -115,8 +115,8 @@
 
   &--bottom-sheet-icon {
     display: flex;
-    margin-right: tokens.bpk-spacing-lg();
     fill: tokens.$bpk-font-color-base;
+    margin-inline-end: tokens.bpk-spacing-lg();
   }
 
   &--bottom-sheet-text {
